Fix display black board